[package]
name = "cipher_fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.*", features = ["derive"] }
dyn-clone = "1.0.9"
rand = { version = "0.8.*", features = ["alloc", "std_rng"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
statistical = "1.0.*"
typetag = "0.2.3"

[[bin]]
name = "fuzzer"
